--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,5 @@
   </li>
 </ul>
 
-<iframe #projetobase src="" style="display: none;"  sandbox="allow-same-origin allow-scripts allow-popups allow-forms"></iframe>
-<iframe #scaffolding src="" style="display: none;"  sandbox="allow-same-origin allow-scripts allow-popups allow-forms"></iframe>
+<iframe #projetobase src="" style="display: none;" ></iframe>
+<iframe #scaffolding src="" style="display: none;" ></iframe>
