--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <ul>
   <li>
-    <a (click)="activeRoute('projetobase', '/')">Projeto Base</a>
+    <a (click)="route('angularjs', '/')">Projeto Base</a>
   </li>
   <li>
-    <a (click)="activeRoute('scaffolding', '/')">Scaffolding</a>
+    <a (click)="route('angular', '/')">Scaffolding</a>
   </li>
   <li>
-    <a (click)="activeRoute('scaffolding', '/detail')">Scaffolding detalhe</a>
+    <a (click)="route('angular', '/detail')">Scaffolding detalhe</a>
   </li>
 </ul>
 
-<iframe #projetobase src="" style="display: none;" ></iframe>
-<iframe #scaffolding src="" style="display: none;" ></iframe>
+<iframe #angularjs src="" style="display: none;"></iframe>
+<iframe #angular src="" style="display: none;"></iframe>
